...
        
        tableView.register(CategoryTableViewCell.self, forCellReuseIdentifier: "cell")
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 10
        tableView.allowsSelection = false
        tableView.allowsMultipleSelection = false
        tableView.accessibilityIdentifier = "searchTable"
        return tableView
    }()
    
    lazy var searchBar:UISearchBar = {
        let searchBar = UISearchBar()
        searchBar.accessibilityIdentifier = "searchBar"
...
